Let "Manually load Plugins" work again

Courtesy patch by: Dominik Cermak. Thanks :)

BUG:293761